@@ -5,19 +5,21 @@ package com.android.tools.r8.optimize.atomicfieldupdater;
 
 import static com.android.tools.r8.DiagnosticsMatcher.diagnosticMessage;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.core.AnyOf.anyOf;
+import static org.hamcrest.core.IsNot.not;
 import static org.hamcrest.core.StringContains.containsString;
 import static org.junit.Assert.assertFalse;
 
 import com.android.tools.r8.TestBase;
 import com.android.tools.r8.TestParameters;
-import com.android.tools.r8.TestShrinkerBuilder;
 import com.android.tools.r8.ToolHelper.DexVm.Version;
+import com.android.tools.r8.references.Reference;
 import com.android.tools.r8.utils.BooleanUtils;
 import com.android.tools.r8.utils.codeinspector.CodeMatchers;
 import com.android.tools.r8.utils.codeinspector.MethodSubject;
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReferenceFieldUpdater;
+import org.hamcrest.core.AnyOf;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
@@ -25,15 +27,15 @@ import org.junit.runners.Parameterized.Parameter;
 import org.junit.runners.Parameterized.Parameters;
 
 @RunWith(Parameterized.class)
-public class AtomicFieldUpdaterNullHolderTest extends TestBase {
+public class AtomicFieldUpdaterKeepTest extends TestBase {
 
   @Parameter(0)
   public TestParameters parameters;
 
   @Parameter(1)
-  public boolean dontObfuscate;
+  public boolean keepRule;
 
-  @Parameters(name = "{0}, dontObfuscate:{1}")
+  @Parameters(name = "{0}, keeprule:{1}")
   public static List<Object[]> data() {
     // TODO(b/453628974): test all dex and api levels.
     return buildParameters(
@@ -59,29 +61,36 @@ public class AtomicFieldUpdaterNullHolderTest extends TestBase {
         .addProgramClasses(testClass)
         .allowDiagnosticInfoMessages()
         .addKeepMainRule(testClass)
-        .applyIf(dontObfuscate, TestShrinkerBuilder::addDontObfuscate)
+        .applyIf(
+            keepRule,
+            testing ->
+                testing.addKeepFieldRules(
+                    Reference.fieldFromField(testClass.getDeclaredField("myString$FU"))))
         .compileWithExpectedDiagnostics(
             diagnostics -> {
-              diagnostics.assertInfosMatch(
-                  diagnosticMessage(containsString("Can instrument")),
-                  diagnosticMessage(containsString("Can optimize")),
-                  // TODO(b/453628974): The field should be removed once nullability analysis is
-                  // more precise.
-                  diagnosticMessage(containsString("Cannot remove")));
+              if (keepRule) {
+                diagnostics.assertInfosMatch(
+                    diagnosticMessage(containsString("Cannot instrument")));
+              } else {
+                diagnostics.assertInfoThatMatches(
+                    diagnosticMessage(containsString("Can instrument")));
+              }
             })
         .inspect(
             inspector -> {
               MethodSubject method = inspector.clazz(testClass).mainMethod();
-              assertThat(
-                  method,
-                  CodeMatchers.invokesMethod(
-                      "java.lang.Object",
-                      "sun.misc.Unsafe",
-                      "getObjectVolatile",
-                      ImmutableList.of("java.lang.Object", "long")));
+              AnyOf<MethodSubject> usesUnsafe =
+                  anyOf(
+                      CodeMatchers.invokesMethodWithHolder("sun.misc.Unsafe"),
+                      CodeMatchers.invokesMethodWithHolder("jdk.internal.misc.Unsafe"));
+              if (keepRule) {
+                assertThat(method, not(usesUnsafe));
+              } else {
+                assertThat(method, usesUnsafe);
+              }
             })
         .run(parameters.getRuntime(), testClass)
-        .assertFailureWithErrorThatThrows(ClassCastException.class);
+        .assertSuccessWithOutputLines("Hello");
   }
 
   // Corresponding to simple kotlin usage of `atomic("Hello")` via atomicfu.
@@ -102,13 +111,8 @@ public class AtomicFieldUpdaterNullHolderTest extends TestBase {
     }
 
     public static void main(String[] args) {
-      TestClass holder;
-      if (System.out != null) {
-        holder = null;
-      } else {
-        holder = new TestClass();
-      }
-      System.out.println(myString$FU.get(holder));
+      TestClass instance = new TestClass();
+      System.out.println(myString$FU.get(instance));
     }
   }
 }
